<resources>

    <string name="app_name">ERNIbot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="settings_select_bot">Choose a bot</string>
    <string name="settings_select_bot_aiml">Own Interpreter</string>
    <string name="settings_select_bot_pandora">Use Pandorabot</string>
    <string name="pref_header_pandorabot">Pandorabot Settings</string>
    <string name="pref_title_pandorabot_userkey">User Key</string>
    <string name="pref_default_pandorabot_userkey">acc7dd336d2efdde3242f40e4c6affd7</string>
    <string name="pref_title_pandorabot_appid">App Id</string>
    <string name="pref_default_pandorabot_appid">1409613240932</string>
    <string name="pref_title_pandorabot_botname">Botname</string>
    <string name="pref_default_pandorabot_botname">dohren</string>
    <string name="pref_title_pandorabot_hostname">Hostname</string>
    <string name="pref_default_pandorabot_hostname">aiaas.pandorabots.com</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_pandorabot">Enable Pandorabot</string>
    <string name="pref_description_enable_pandorabots">This enables the Rest API for Pandorabots</string>



    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
