<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_pandorabots"
        android:summary="@string/pref_description_enable_pandorabots"
        android:title="@string/pref_title_enable_pandorabot" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_pandorabot_appid"
        android:key="pandorabot_appid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pandorabot_appid" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_pandorabot_userkey"
        android:key="pandorabot_userkey"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pandorabot_userkey" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_pandorabot_hostname"
        android:key="pandorabot_hostname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pandorabot_hostname" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!-- ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
